--- a/demo/example.css
+++ b/demo/example.css
@@ -16,7 +16,7 @@ body {
     text-decoration: none;
 }
 
-.ulist-input {
+#userlist {
     max-width: 203px;
     background: transparent;
     float: left;
@@ -26,6 +26,6 @@ body {
     font-size: 14px;
 }
 
-.ulist-input:focus, .search:focus {
+#userlist:focus {
     outline: none;
 }
